--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,151 +1,112 @@
 <mat-toolbar color="primary">
-  <span>Cowin Vaccine Notifier</span>
-  <div class="spacer"></div>
-  <span>{{ statusLable }}</span>
-  <button
-    mat-raised-button
-    class="btnMain"
-    *ngIf="!isRunning"
-    (click)="toggleService()"
-  >
-    Start
-  </button>
-  <button
-    mat-raised-button
-    class="btnMain"
-    *ngIf="isRunning"
-    (click)="toggleService()"
-  >
-    Stop
-  </button>
-  <button mat-icon-button aria-label="About This App">
-    <mat-icon>info</mat-icon>
-  </button>
+	<span>Cowin Vaccine Notifier</span>
+	<div class="spacer"></div>
+	<span class="status-label">{{ statusLable }}</span>
+	<button mat-raised-button class="btnMain" *ngIf="!isRunning" (click)="toggleService()">
+		Start
+	</button>
+	<button mat-raised-button class="btnMain" *ngIf="isRunning" (click)="toggleService()">
+		Stop
+	</button>
+	<button mat-icon-button aria-label="About This App">
+		<mat-icon>info</mat-icon>
+	</button>
 </mat-toolbar>
 <mat-sidenav-container class="sidenav-container">
-  <!-- <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav> -->
+	<!-- <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav> -->
 
-  <mat-sidenav-content>
-    <form class="menu-selection" action="#" [formGroup]="form">
-      <div class="row">
-        <mat-form-field appearance="fill">
-          <mat-label>Enter a date range</mat-label>
-          <mat-date-range-input [formGroup]="form" [rangePicker]="picker">
-            <input
-              matStartDate
-              formControlName="start"
-              placeholder="Start date"
-            />
-            <input matEndDate formControlName="end" placeholder="End date" />
-          </mat-date-range-input>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
-          <mat-date-range-picker #picker></mat-date-range-picker>
+	<mat-sidenav-content>
+		<form class="menu-selection" action="#" [formGroup]="form">
+			<div class="row">
+				<mat-form-field appearance="fill">
+					<mat-label>Enter a date range</mat-label>
+					<mat-date-range-input [formGroup]="form" [rangePicker]="picker">
+						<input matStartDate formControlName="start" placeholder="Start date" />
+						<input matEndDate formControlName="end" placeholder="End date" />
+					</mat-date-range-input>
+					<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+					<mat-date-range-picker #picker></mat-date-range-picker>
 
-          <mat-error *ngIf="form.controls.start.hasError('matStartDateInvalid')"
-            >Invalid start date</mat-error
-          >
-          <mat-error *ngIf="form.controls.end.hasError('matEndDateInvalid')"
-            >Invalid end date</mat-error
-          >
-        </mat-form-field>
-        <mat-form-field
-          [formGroup]="form"
-          hintLabel="6 characters Pin"
-          appearance="fill"
-        >
-          <mat-label>Enter your Pincode</mat-label>
-          <input
-            formControlName="pin"
-            matInput
-            #input
-            maxlength="7"
-            minlength="7"
-            placeholder="Pincode"
-            type="number"
-          />
-          <mat-hint align="end">{{ input.value?.length || 0 }}/6</mat-hint>
-        </mat-form-field>
-      </div>
-      <div class="row">
-        <section formGroupName="age">
-          <mat-label>Age</mat-label>
-          <ul>
-            <li><mat-checkbox formControlName="18">18-45</mat-checkbox></li>
-            <li><mat-checkbox formControlName="45">45+</mat-checkbox></li>
-          </ul>
-        </section>
-        <section formGroupName="vaccine">
-          <mat-label>Vaccine</mat-label>
-          <ul>
-            <li>
-              <mat-checkbox formControlName="covaxin">Covaxin</mat-checkbox>
-            </li>
-            <li>
-              <mat-checkbox formControlName="covishild">Covishild</mat-checkbox>
-            </li>
-            <li>
-              <mat-checkbox formControlName="sputnik">Sputnik-V</mat-checkbox>
-            </li>
-          </ul>
-        </section>
-        <section formGroupName="price">
-          <mat-label>Price</mat-label>
-          <ul>
-            <li><mat-checkbox formControlName="free">Free</mat-checkbox></li>
-            <li><mat-checkbox formControlName="paid">Paid</mat-checkbox></li>
-          </ul>
-        </section>
-      </div>
-    </form>
-    <div class="status">
-      <div class="service-report" *ngIf="statusUpdate | async as data">
-        <div class="service-on mat-elevation-z8">
-          <!-- <div class="config">
+					<mat-error *ngIf="form.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+					<mat-error *ngIf="form.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+				</mat-form-field>
+				<mat-form-field [formGroup]="form" hintLabel="6 characters Pin" appearance="fill">
+					<mat-label>Enter your Pincode</mat-label>
+					<input formControlName="pin" matInput #input maxlength="7" minlength="7" placeholder="Pincode" type="number" />
+					<mat-hint align="end">{{ input.value?.length || 0 }}/6</mat-hint>
+				</mat-form-field>
+			</div>
+			<div class="row">
+				<section formGroupName="age">
+					<mat-label>Age</mat-label>
+					<ul>
+						<li><mat-checkbox formControlName="18">18-45</mat-checkbox></li>
+						<li><mat-checkbox formControlName="45">45+</mat-checkbox></li>
+					</ul>
+				</section>
+				<section formGroupName="vaccine">
+					<mat-label>Vaccine</mat-label>
+					<ul>
+						<li>
+							<mat-checkbox formControlName="covaxin">Covaxin</mat-checkbox>
+						</li>
+						<li>
+							<mat-checkbox formControlName="covishild">Covishild</mat-checkbox>
+						</li>
+						<li>
+							<mat-checkbox formControlName="sputnik">Sputnik-V</mat-checkbox>
+						</li>
+					</ul>
+				</section>
+				<section formGroupName="price">
+					<mat-label>Price</mat-label>
+					<ul>
+						<li><mat-checkbox formControlName="free">Free</mat-checkbox></li>
+						<li><mat-checkbox formControlName="paid">Paid</mat-checkbox></li>
+					</ul>
+				</section>
+			</div>
+		</form>
+		<div class="status">
+			<div class="service-report" *ngIf="statusUpdate | async as data">
+				<div class="service-on mat-elevation-z8">
+					<!-- <div class="config">
             <p
               *ngFor="let line of formatConfig(data.serviceConfig).split('\n')"
             >
               {{ line }}
             </p>
           </div> -->
-          <table mat-table [dataSource]="data.results" class="result-table">
-            <!--- Note that these columns can be defined in any order.
+					<table mat-table [dataSource]="data.results" class="result-table">
+						<!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- Position Column -->
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef>Date</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.date.toLocaleDateString() }}
-              </td>
-            </ng-container>
+						<!-- Position Column -->
+						<ng-container matColumnDef="date">
+							<th mat-header-cell *matHeaderCellDef>Date</th>
+							<td mat-cell *matCellDef="let element">
+								{{ element.date.toLocaleDateString() }}
+							</td>
+						</ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="sessions">
-              <th mat-header-cell *matHeaderCellDef>Availability</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.sessions.length }}
-              </td>
-            </ng-container>
+						<!-- Name Column -->
+						<ng-container matColumnDef="sessions">
+							<th mat-header-cell *matHeaderCellDef>Availability</th>
+							<td mat-cell *matCellDef="let element">
+								{{ element.sessions.length }}
+							</td>
+						</ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="['date', 'sessions']"></tr>
-            <tr
-              mat-row
-              *matRowDef="let row; columns: ['date', 'sessions']"
-            ></tr>
-          </table>
-          <mat-paginator
-            [pageSizeOptions]="[5]"
-            showFirstLastButtons
-          ></mat-paginator>
-        </div>
-      </div>
-      <div class="service-no-report" *ngIf="!(statusUpdate | async)">
-        <div class="service-starting" *ngIf="isRunning">Starting Service</div>
-        <div class="service-off" *ngIf="!isRunning">Service not running</div>
-      </div>
-    </div>
-  </mat-sidenav-content>
+						<tr mat-header-row *matHeaderRowDef="['date', 'sessions']"></tr>
+						<tr mat-row *matRowDef="let row; columns: ['date', 'sessions']"></tr>
+					</table>
+					<mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons></mat-paginator>
+				</div>
+			</div>
+			<div class="service-no-report" *ngIf="!(statusUpdate | async)">
+				<div class="service-starting" *ngIf="isRunning">Starting Service</div>
+				<div class="service-off" *ngIf="!isRunning">Service not running</div>
+			</div>
+		</div>
+	</mat-sidenav-content>
 </mat-sidenav-container>
