updated backgroud service and show notification feature

--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -42,5 +42,10 @@ mat-sidenav-content {
 				}
 			}
 		}
+		.service-no-report{
+			margin: auto;
+			width: fit-content;
+			padding: 8rem;
+		}
 	}
 }
