--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -71,15 +71,14 @@
 			<div class="service-report" *ngIf="statusUpdate | async as data">
 				<div class="service-on mat-elevation-z8">
 					<!-- <div class="config">
-            <p
-              *ngFor="let line of formatConfig(data.serviceConfig).split('\n')"
-            >
-              {{ line }}
-            </p>
-          </div> -->
+						<p
+							*ngFor="let line of formatConfig(data.serviceConfig).split('\n')"
+						>
+							{{ line }}
+						</p>
+					</div> -->
 					<table mat-table [dataSource]="data.results" class="result-table">
-						<!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+						<!--- Note that these columns can be defined in any order. The actual rendered columns are set as a property on the row definition" -->
 
 						<!-- Position Column -->
 						<ng-container matColumnDef="date">
@@ -93,7 +92,7 @@
 						<ng-container matColumnDef="sessions">
 							<th mat-header-cell *matHeaderCellDef>Availability</th>
 							<td mat-cell *matCellDef="let element">
-								{{ element.sessions.length }}
+								{{ element.total }}
 							</td>
 						</ng-container>
 
@@ -104,7 +103,11 @@
 				</div>
 			</div>
 			<div class="service-no-report" *ngIf="!(statusUpdate | async)">
-				<div class="service-starting" *ngIf="isRunning">Starting Service</div>
+				
+				<div class="service-starting" *ngIf="isRunning">
+					<mat-spinner></mat-spinner>
+					<span>Starting Service</span>
+				</div>
 				<div class="service-off" *ngIf="!isRunning">Service not running</div>
 			</div>
 		</div>
